--- a/Project.toml
+++ b/Project.toml
@@ -4,4 +4,6 @@ authors = ["Ali Ghorashi <aligho@mit.edu>"]
 version = "0.1.0"
 
 [deps]
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
