--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,12 @@
 language: julia
+os:
+  - linux
+  - osx
 julia:
   - nightly
   - 1.0.6
   - 1.5.2
+matrix: 
+  - PYTHON=Conda-python
+notifications:
+  email = true
