commented out script

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,12 +13,11 @@ matrix:
       - julia: nightly
       - julia: 1.0.6
       - julia: 1.5.2
-script:
-  - julia --project --check-bounds=yes -e 'import Pkg; ENV["PYTHON"]=""; Pkg.build("PyCall"); Pkg.build(); Pkg.test("jdftx_to_plot"; coverage=true)'
+#script:
+  #- julia --project --check-bounds=yes -e 'import Pkg; ENV["PYTHON"]=""; Pkg.build("PyCall"); Pkg.build(); Pkg.test("jdftx_to_plot"; coverage=true)'
 notifications:
   email = true
 
 
 
 
-  
