--- a/.travis.yml
+++ b/.travis.yml
@@ -2,17 +2,17 @@ language: julia
 os:
   - linux
   - osx
-  - windows
+  #- windows
 julia:
   - nightly
   - 1.0.6
   - 1.5.2
 matrix: 
   - PYTHON=Conda-python
-    allow_failures: 
-      - julia: nightly
-      - julia: 1.0.6
-      - julia: 1.5.2
+    #allow_failures: 
+    #  - julia: nightly
+    #  - julia: 1.0.6
+    #  - julia: 1.5.2
 #script:
   #- julia --project --check-bounds=yes -e 'import Pkg; ENV["PYTHON"]=""; Pkg.build("PyCall"); Pkg.build(); Pkg.test("jdftx_to_plot"; coverage=true)'
 notifications:
