--- a/.travis.yml
+++ b/.travis.yml
@@ -4,15 +4,15 @@ coveralls: true
 language: julia
 os:
   - linux
-  - osx
-  - windows
+  #- osx
+  #- windows
 julia:
   - nightly
   - 1.5.2
   - 1.6
 jobs:
   allow_failures:
-  - os: windows, osx
+  #- os: windows, osx
   - julia: nightly
 matrix: 
   - PYTHON=Conda-python
